guardrails/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-image-tag
      match:
        any:
          - resources:
              kinds: [Pod]
      validate:
        message: "Tag :latest não é permitida. Use uma tag de versão específica."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
